# policy-compliance-agent

./: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.opencode/agents/: agentic-supervisor.md  coverage-analyst.md  holdout-auditor.md
.opencode/commands/: agentic-loop-audit.md  agentic-loop-coverage.md  agentic-loop-explain.md  agentic-loop-run.md
configs/: default.yaml  demo.yaml
data/prompts/: demo_prompts.json
data/results/demo/: demo_eval_dataset.json  demo_synthetic_dataset.json  holdout_transcripts.json  sample_helpdesk_adversarial_after_reset_verification.txt  sample_transcripts.json
data/results/demo/transcript_scripts/: sample_dual_policy_pass_101_pass_102.txt  sample_helpdesk_adversarial_after_reset_verification.txt  sample_helpdesk_adversarial_optional_verification.txt  sample_helpdesk_bad.txt  sample_helpdesk_conversation_pass_101_fail_102.txt  sample_helpdesk_good.txt  sample_travel_adversarial_confirm_then_disclose.txt  sample_travel_adversarial_no_fee_no_credit.txt  sample_travel_borderline_review.txt  sample_travel_partial.txt  (+1 more)
docs/: opencode_agentic_loop.md
resources/: demo_disclosures.json
scripts/: build_intro_slides.py  update_agentic_slides.py
src/policy_compliance_agent/cli/: __init__.py  generate_synthetic.py  run_inference.py
src/policy_compliance_agent/core/: __init__.py  json_utils.py  runtime.py  transcripts.py
src/policy_compliance_agent/demo/: app.py  services.py
src/policy_compliance_agent/inference/: __init__.py
src/policy_compliance_agent/training/: __init__.py  cross_encoder.py  sentence_transformer.py
src/sg_cases/: __init__.py
src/sg_cases/agentic/: __init__.py  loop.py
src/sg_cases/cli/: __init__.py  agentic_loop.py  demo_app.py  evaluate.py  generate_synthetic.py  train_cross_encoder.py  train_sentence_transformer.py
src/sg_cases/core/: config.py  data_split.py  disclosures.py  metadata.py  models.py  paths.py  reporting.py
src/sg_cases/demo/: __init__.py  app.py  services.py
src/sg_cases/evaluation/: __init__.py  report_evaluation.py
src/sg_cases/inference/: enriched.py  semantic.py
src/sg_cases/metadata/: __init__.py  enrichment.py  joiner_hive.py  mapping.py  vl_excel_hive.py
src/sg_cases/synthetic/: __init__.py  external_api_generation.py  qwen_generation.py  synthetic_data_generation.py  synthetic_script_generation.py
src/sg_cases/training/: cross_encoder.py  data_utils.py  sentence_transformer.py
tests/: test_agentic_loop.py  test_cli.py  test_config.py  test_demo_app.py  test_demo_data.py  test_demo_services.py  test_evaluation.py  test_imports.py  test_semantic.py  test_training_data.py  test_transcripts.py
