[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-compliance-agent"
version = "0.1.0"
description = "Agentic policy compliance demo for synthetic data, training, inference, and retraining."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.1.0",
  "datasets>=2.19.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.1.0",
  "tqdm>=4.66.0",
  "transformers>=4.40.0",
]

[project.optional-dependencies]
demo = [
  "gradio>=4.44.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
policy-generate-synthetic = "policy_compliance_agent.cli.generate_synthetic:main"
policy-train-retriever = "policy_compliance_agent.cli.train_sentence_transformer:main"
policy-train-verifier = "policy_compliance_agent.cli.train_cross_encoder:main"
policy-run-inference = "policy_compliance_agent.cli.run_inference:main"
policy-demo-app = "policy_compliance_agent.cli.demo_app:main"
policy-agentic-loop = "policy_compliance_agent.cli.agentic_loop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
